--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,500' rel='stylesheet' type='text/css'>
   </head>
 
-  <body style="display: none;" data-project-css="css/index.css" data-project-js="js/index.js">
-
   <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -42,13 +40,11 @@
             <button type="submit" class="btn btn-default">Submit</button>
           </form>-->
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#" class="vt-p">Sign in</a></li>
+            <li><a id="auth" href="#signin" class="vt-p">Sign in</a></li>
           </ul>
         </div>
       </div>
     </nav>
-
-
 
     <div id="slides">
       <ul class="slides-container">
@@ -89,8 +85,87 @@
       </nav>
     </div>
 
+    <div id="signin" class="popupContainer" style="display:none;">
+     <header class="popupHeader">
+       <span class="header_title">Login</span>
+       <span class="modal_close"><i class="fa fa-times"></i></span>
+     </header>
 
-    <script src="js/jquery-2.1.3.min.js"></script>
+      <section class="popupBody">
+        <!-- Here Goes all the Login and signup Forms -->
+        <div class="social_login">
+          <div class="clearfix">
+              <a class="social_box fb" href="#"><span class="icon_title">Connect with
+              Facebook</span></a> <a class="social_box google" href="#"><span class=
+              "icon_title">Connect with Google</span></a>
+          </div>
+
+          <div class="centeredText">
+              <span>Or use your Email address</span>
+          </div>
+
+          <div class="action_btns">
+              <div class="one_half">
+                  <a class="btn" href="#" id="login_form" name="login_form">Login</a>
+              </div>
+
+              <div class="one_half last">
+                  <a class="btn" href="#" id="register_form" name=
+                  "register_form">Sign up</a>
+              </div>
+          </div>
+      </div>
+      <div class="user_login">
+          <form>
+              <label>Email / Username</label> <input type="text"><br>
+              <label>Password</label> <input type="password"><br>
+
+              <div class="checkbox">
+                  <input id="remember" type="checkbox"> <label for=
+                  "remember">Remember me on this computer</label>
+              </div>
+
+              <div class="action_btns">
+                  <div class="one_half">
+                      <a class="btn back_btn" href="#">Back</a>
+                  </div>
+
+                  <div class="one_half last">
+                      <a class="btn btn_red" href="#">Login</a>
+                  </div>
+              </div>
+          </form>
+
+          <a class="forgot_password" href="#">Forgot password?</a>
+      </div>
+      <div class="user_register">
+        <form>
+            <label>Full Name</label> <input type="text"><br>
+            <label>Email Address</label> <input type="email"><br>
+            <label>Password</label> <input type="password"><br>
+
+            <div class="checkbox">
+                <input id="send_updates" type="checkbox"> <label for=
+                "send_updates">Send me occasional email updates</label>
+            </div>
+
+            <div class="action_btns">
+                <div class="one_half">
+                    <a class="btn back_btn" href="#">Back</a>
+                </div>
+
+                <div class="one_half last">
+                    <a class="btn btn_red" href="#">Register</a>
+                </div>
+            </div>
+        </form>
+    </div>
+      </section>
+    </div>
+
+
+    <script src="js/jquery-1.11.2.min.js"></script>
+    <script src="js/jquery.leanModal.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.superslides.min.js"></script>
     <script id="webplate-stack" src="webplate/stack.js"></script>
