--- a/index.html
+++ b/index.html
@@ -95,9 +95,18 @@
         <!-- Here Goes all the Login and signup Forms -->
         <div class="social_login">
           <div class="clearfix">
-              <a class="social_box fb" href="#"><span class="icon_title">Connect with
-              Facebook</span></a> <a class="social_box google" href="#"><span class=
-              "icon_title">Connect with Google</span></a>
+              <a class="social_box fb" href="#">
+                <span class="icon"><i class="fa fa-facebook fa-lg"></i></span>
+                <span class="icon_title">Connect with Facebook</span>
+              </a>
+              <a class="social_box google" href="#">
+                <span class="icon"><i class="fa fa-google-plus"></i></span>
+                <span class="icon_title">Connect with Google</span>
+              </a>
+              <a class="social_box linkedIn" href="#">
+                <span class="icon"><i class="fa fa-linkedin"></i></span>
+                <span class="icon_title">Connect with LinkedIn</span>
+              </a>
           </div>
 
           <div class="centeredText">
@@ -106,12 +115,11 @@
 
           <div class="action_btns">
               <div class="one_half">
-                  <a class="btn" href="#" id="login_form" name="login_form">Login</a>
+                  <a href="#" id="login_form" style="text-decoration:none;" name="login_form" class="button square aqua">Login</a>
               </div>
 
               <div class="one_half last">
-                  <a class="btn" href="#" id="register_form" name=
-                  "register_form">Sign up</a>
+                <a href="#" id="register_form" style="text-decoration:none;" name="register_form" class="button square red">Sign up</a>
               </div>
           </div>
       </div>
@@ -121,22 +129,21 @@
               <label>Password</label> <input type="password"><br>
 
               <div class="checkbox">
-                  <input id="remember" type="checkbox"> <label for=
-                  "remember">Remember me on this computer</label>
+                  <input id="remember" type="checkbox"> <label for="remember">Remember me on this computer</label>
               </div>
 
               <div class="action_btns">
                   <div class="one_half">
-                      <a class="btn back_btn" href="#">Back</a>
+                      <a href="#" style="text-decoration:none;" class="back_btn button square black">Back</a>
                   </div>
 
                   <div class="one_half last">
-                      <a class="btn btn_red" href="#">Login</a>
+                      <a href="#" style="text-decoration:none;" class="button square pink">Login</a>
                   </div>
               </div>
           </form>
 
-          <a class="forgot_password" href="#">Forgot password?</a>
+          <a class="forgot_password" style="text-decoration:none;" href="#">Forgot password?</a>
       </div>
       <div class="user_register">
         <form>
@@ -151,11 +158,11 @@
 
             <div class="action_btns">
                 <div class="one_half">
-                    <a class="btn back_btn" href="#">Back</a>
+                    <a href="#" style="text-decoration:none;" class="back_btn button square black">Back</a>
                 </div>
 
                 <div class="one_half last">
-                    <a class="btn btn_red" href="#">Register</a>
+                    <a href="#" style="text-decoration:none;" class="button square pink">Sign up</a>
                 </div>
             </div>
         </form>
