Added checkboxes, enhanced design.

--- a/index.html
+++ b/index.html
@@ -128,8 +128,9 @@
               <label>Email / Username</label> <input type="text"><br>
               <label>Password</label> <input type="password"><br>
 
-              <div class="checkbox">
-                  <input id="remember" type="checkbox"> <label for="remember">Remember me on this computer</label>
+              <div class="formplate checkbox">
+                  <input type="checkbox" name="checkbox" value="checkbox" id="check_remember">
+                  <p>Remember me</p>
               </div>
 
               <div class="action_btns">
@@ -147,13 +148,14 @@
       </div>
       <div class="user_register">
         <form>
-            <label>Full Name</label> <input type="text"><br>
+            <label>Username</label> <input type="text"><br>
             <label>Email Address</label> <input type="email"><br>
             <label>Password</label> <input type="password"><br>
+            <input type="password"><br>
 
-            <div class="checkbox">
-                <input id="send_updates" type="checkbox"> <label for=
-                "send_updates">Send me occasional email updates</label>
+            <div class="formplate checkbox">
+                <input type="checkbox" name="checkbox" value="checkbox" id="check_send_updates">
+                <p>Send me occasional email updates</p>
             </div>
 
             <div class="action_btns">
