--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
   <head>
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/superslides.css" rel="stylesheet"  type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,500' rel='stylesheet' type='text/css'>
+    <script src="js/jquery-1.11.2.min.js"></script>
+    <script src="js/jquery.leanModal.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.superslides.min.js"></script>
+    <script id="webplate-stack" src="webplate/stack.js"></script>
+    <script src="js/index.js"></script>
+
+    <link href="css/index.css" rel="stylesheet" type="text/css">
   </head>
 
   <body>
@@ -74,6 +82,16 @@
             <h1 class="caption">Call of Duty Ember</h1>
             <div class="contrast">
               <p>Brand new episode of the real-time first-person shooter.</p>
+              <a href="#" class="button square large pink">Read more</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <img src="img/flicker-4.jpg" alt="">
+          <div class="container">
+            <h1 class="caption">PlayTune</h1>
+            <div class="contrast">
+              <p>Listen to music that fits your current mood.</p>
               <a href="#" class="button square large pink">Read more</a>
             </div>
           </div>
@@ -171,14 +189,5 @@
     </div>
       </section>
     </div>
-
-
-    <script src="js/jquery-1.11.2.min.js"></script>
-    <script src="js/jquery.leanModal.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.superslides.min.js"></script>
-    <script id="webplate-stack" src="webplate/stack.js"></script>
-    <script src="js/index.js"></script>
-    <link href="css/index.css" rel="stylesheet" type="text/css">
   </body>
 </html>
