Repaired basic content structure. Enhanced css.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
   <head>
     <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -6,8 +7,8 @@
     <link href='http://fonts.googleapis.com/css?family=Raleway:200,300,500' rel='stylesheet' type='text/css'>
     <script src="js/jquery-1.11.2.min.js"></script>
     <script src="js/jquery.leanModal.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.superslides.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script id="webplate-stack" src="webplate/stack.js"></script>
     <script src="js/index.js"></script>
 
@@ -94,6 +95,56 @@
               <h1 class="caption">PlayTune</h1>
               <div class="contrast">
                 <p>Listen to music that fits your current mood.</p>
+                <a href="#" class="button square large pink">Read more</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="img/flicker-5.jpg" alt="">
+            <div class="container">
+              <h1 class="caption">Skyscrapers</h1>
+              <div class="contrast">
+                <p>Some lorem ipsum stuff.</p>
+                <a href="#" class="button square large pink">Read more</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="img/flicker-6.jpg" alt="">
+            <div class="container">
+              <h1 class="caption">Picturesque picture</h1>
+              <div class="contrast">
+                <p>Some lorem ipsum stuff here.</p>
+                <a href="#" class="button square large pink">Read more</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="img/flicker-7.jpg" alt="">
+            <div class="container">
+              <h1 class="caption">Cityscape</h1>
+              <div class="contrast">
+                <p>It's New York, babe :)</p>
+                <a href="#" class="button square large pink">Read more</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="img/flicker-8.jpg" alt="">
+            <div class="container">
+              <h1 class="caption">Night shot</h1>
+              <div class="contrast">
+                <p>Nicely done with focus</p>
+                <a href="#" class="button square large pink">Read more</a>
+              </div>
+            </div>
+          </li>
+          <li>
+            <img src="img/flicker-9.jpg" alt="">
+            <div class="container">
+              <h1 class="caption">Black Cat</h1>
+              <div class="contrast">
+                <p>The last slide... Rly :)</p>
                 <a href="#" class="button square large pink">Read more</a>
               </div>
             </div>
@@ -196,8 +247,8 @@
 
   <!-- Main content -->
   <div class="row main-content">
-    <div class="panels col-xs-7 col-sm-8 col-md-8 col-lg-9">
-        <div class="panel panel-primary col-md-5 col-lg-5">
+    <div class="panels col-xs-7 col-sm-8 col-md-9 col-lg-10">
+        <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
           <div class="panel-heading">
             <h3 class="panel-title">Language Tutor</h3>
           </div>
@@ -205,7 +256,7 @@
             Panel content
           </div>
         </div>
-        <div class="panel panel-primary col-md-5 col-lg-5">
+        <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
           <div class="panel-heading">
             <h3 class="panel-title">TeamBaker</h3>
           </div>
@@ -213,7 +264,7 @@
             Panel content
           </div>
         </div>
-          <div class="panel panel-primary col-md-5 col-lg-5">
+          <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
             <div class="panel-heading">
               <h3 class="panel-title">Call of Duty 'Ember'</h3>
             </div>
@@ -221,7 +272,7 @@
               Panel content
             </div>
           </div>
-          <div class="panel panel-primary col-md-5 col-lg-5">
+          <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
             <div class="panel-heading">
               <h3 class="panel-title">PlayTune</h3>
             </div>
@@ -230,20 +281,19 @@
             </div>
           </div>
     </div>
-    <div class="menu-right col-xs-5 col-sm-4 col-md-4 col-lg-3">
+    <div class="menu-right col-xs-5 col-sm-4 col-md-3 col-lg-2">
       <div class="list-group">
-        <div class="form-group">
+        <div class="form-group hidden-xs">
           <div class="input-group">
-            <span class="input-group-addon"><i class="fa fa-search"></i></span>
-            <input type="text" class="form-control GINGER_SOFTWARE_control" spellcheck="false" ginger_software_editor="true" style="font-size: 15px; white-space: pre-wrap; line-height: 11px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAO0AAAAVCAYAAACqjGn7AAAAmElEQVR4Xu3TAQ0AAAgCQelf2hy/nQnYCTtHgEBKYKm0whIgcEarBARiAkYbe5i4BIxWBwjEBIw29jBxCRitDhCICRht7GHiEjBaHSAQEzDa2MPEJWC0OkAgJmC0sYeJS8BodYBATMBoYw8Tl4DR6gCBmIDRxh4mLgGj1QECMQGjjT1MXAJGqwMEYgJGG3uYuASMVgcIxAQeplkAFgyMt0UAAAAASUVORK5CYII=) !important; background-attachment: local !important; background-position: 15px 21px !important; background-repeat: no-repeat !important;">
+            <input class="search" type="text" id="text-input" name="text-input">
             <span class="input-group-btn">
-              <button class="btn btn-default" type="button">Search</button>
+              <a href="#" class="button blue square">Search</a>
             </span>
           </div>
         </div>
-        <a href="#" class="list-group-item active vt-p">
+        <p class="list-group-item active vt-p">
           Categories
-        </a>
+        </p>
         <a href="#" class="list-group-item vt-p">IT
           <span class="badge">14</span>
         </a>
