Added main page content. Enhanced css.

--- a/index.html
+++ b/index.html
@@ -248,51 +248,377 @@
   <!-- Main content -->
   <div class="row main-content">
     <div class="panels col-xs-7 col-sm-8 col-md-9 col-lg-10">
-        <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
+        <div class="panel panel-warning col-sm-5 col-md-5 col-lg-3">
           <div class="panel-heading">
-            <h3 class="panel-title">Language Tutor</h3>
+            <h3 class="panel-title"><a href="#">Language Tutor</a></h3>
           </div>
           <div class="panel-body">
-            Panel content
+            <div class="image-container">
+              <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+            </div>
+            <div class="info-container">
+              <p><b>by <a href="#">Daniel Vasylenko</a></b></p>
+              <b>Description:</b>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+              <ul class="project_hashtags">
+                <li class="hashtag">
+                  <a href="#"><span class="label label-success">JavaFX</span></a>
+                </li>
+                <li class="hashtag">
+                  <a href="#"><span class="label label-success">Maven</span></a>
+                </li>
+                <li class="hashtag">
+                  <a href="#"><span class="label label-success">Java</span></a>
+                </li>
+                <li class="hashtag">
+                  <a href="#"><span class="label label-success">h2</span><a/>
+                </li>
+              </ul>
+              <div class="progress">
+                <div class="progress-bar progress-bar-warning" style="width: 25%"></div>
+              </div>
+              <hr>
+              <ul class="project-params">
+                <li class="param">
+                  <span>40 <i class="fa fa-heart"></i></span>
+                </li>
+                <li class="param">
+                  <span>25 <i class="fa fa-eye"></i></span>
+                </li>
+                <li class="param">
+                  <span>0/3 <i class="fa fa-child"></i></span>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
         <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
           <div class="panel-heading">
-            <h3 class="panel-title">TeamBaker</h3>
+            <h3 class="panel-title"><a href="#">TeamBaker</a></h3>
           </div>
           <div class="panel-body">
-            Panel content
+            <div class="image-container">
+              <a href="#"><img src="img/proj_img-4.jpg"></img></a>
+            </div>
+            <div class="info-container">
+              <p><b>by <a href="#">Daniel Vasylenko</a></b></p>
+              <b>Description:</b>
+              <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+              <ul class="project_hashtags">
+                <li class="hashtag">
+                  <a href="#"><span class="label label-success">JavaFX</span></a>
+                </li>
+                <li class="hashtag">
+                  <a href="#"><span class="label label-success">Maven</span></a>
+                </li>
+                <li class="hashtag">
+                  <a href="#"><span class="label label-success">Java</span></a>
+                </li>
+                <li class="hashtag">
+                  <a href="#"><span class="label label-success">h2</span><a/>
+                </li>
+              </ul>
+              <div class="progress">
+                <div class="progress-bar progress-bar-primary" style="width: 60%"></div>
+              </div>
+              <hr>
+              <ul class="project-params">
+                <li class="param">
+                  <span>32 <i class="fa fa-heart"></i></span>
+                </li>
+                <li class="param">
+                  <span>54 <i class="fa fa-eye"></i></span>
+                </li>
+                <li class="param">
+                  <span>2/4 <i class="fa fa-child"></i></span>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-          <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
+          <div class="panel panel-info col-sm-5 col-md-5 col-lg-3">
             <div class="panel-heading">
-              <h3 class="panel-title">Call of Duty 'Ember'</h3>
+              <h3 class="panel-title"><a href="#">Call of Duty 'Ember'</a></h3>
             </div>
             <div class="panel-body">
-              Panel content
+              <div class="image-container">
+                <a href="#"><img src="img/proj_img-2.jpg"></img></a>
+              </div>
+              <div class="info-container">
+                <p><b>by <a href="#">Daniel Vasylenko</a></b></p>
+                <b>Description:</b>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+                <ul class="project_hashtags">
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">JavaFX</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Maven</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Java</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">h2</span><a/>
+                  </li>
+                </ul>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-info" style="width: 10%"></div>
+                </div>
+                <hr>
+                <ul class="project-params">
+                  <li class="param">
+                    <span>102 <i class="fa fa-heart"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>512 <i class="fa fa-eye"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>8/8 <i class="fa fa-child"></i></span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="panel panel-danger col-sm-5 col-md-5 col-lg-3">
+            <div class="panel-heading">
+              <h3 class="panel-title"><a href="#">PlayTune</a></h3>
+            </div>
+            <div class="panel-body">
+              <div class="image-container">
+                <a href="#"><img src="img/proj_img-3.jpg"></img></a>
+              </div>
+              <div class="info-container">
+                <p><b>by <a href="#">Daniel Vasylenko</a></b></p>
+                <b>Description:</b>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+                <ul class="project_hashtags">
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">JavaFX</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Maven</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Java</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">h2</span><a/>
+                  </li>
+                </ul>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-danger" style="width: 35%"></div>
+                </div>
+                <hr>
+                <ul class="project-params">
+                  <li class="param">
+                    <span>35 <i class="fa fa-heart"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>80 <i class="fa fa-eye"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>1/6 <i class="fa fa-child"></i></span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="panel panel-info col-sm-5 col-md-5 col-lg-3">
+            <div class="panel-heading">
+              <h3 class="panel-title"><a href="#">Call of Duty 'Ember'</a></h3>
+            </div>
+            <div class="panel-body">
+              <div class="image-container">
+                <a href="#"><img src="img/proj_img-4.jpg"></img></a>
+              </div>
+              <div class="info-container">
+                <p><b>by <a href="#">Daniel Vasylenko</a></b></p>
+                <b>Description:</b>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+                <ul class="project_hashtags">
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">JavaFX</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Maven</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Java</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">h2</span><a/>
+                  </li>
+                </ul>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-info" style="width: 10%"></div>
+                </div>
+                <hr>
+                <ul class="project-params">
+                  <li class="param">
+                    <span>102 <i class="fa fa-heart"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>512 <i class="fa fa-eye"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>8/8 <i class="fa fa-child"></i></span>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+
+          <div class="panel panel-danger col-sm-5 col-md-5 col-lg-3">
+            <div class="panel-heading">
+              <h3 class="panel-title"><a href="#">PlayTune</a></h3>
+            </div>
+            <div class="panel-body">
+              <div class="image-container">
+                <a href="#"><img src="img/proj_img-3.jpg"></img></a>
+              </div>
+              <div class="info-container">
+                <p><b>by <a href="#">Daniel Vasylenko</a></b></p>
+                <b>Description:</b>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+                <ul class="project_hashtags">
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">JavaFX</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Maven</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Java</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">h2</span><a/>
+                  </li>
+                </ul>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-danger" style="width: 35%"></div>
+                </div>
+                <hr>
+                <ul class="project-params">
+                  <li class="param">
+                    <span>35 <i class="fa fa-heart"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>80 <i class="fa fa-eye"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>1/6 <i class="fa fa-child"></i></span>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
           <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
             <div class="panel-heading">
-              <h3 class="panel-title">PlayTune</h3>
+              <h3 class="panel-title"><a href="#">TeamBaker</a></h3>
             </div>
             <div class="panel-body">
-              Panel content
+              <div class="image-container">
+                <a href="#"><img src="img/proj_img-2.jpg"></img></a>
+              </div>
+              <div class="info-container">
+                <p><b>by <a href="#">Daniel Vasylenko</a></b></p>
+                <b>Description:</b>
+                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+                <ul class="project_hashtags">
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">JavaFX</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Maven</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">Java</span></a>
+                  </li>
+                  <li class="hashtag">
+                    <a href="#"><span class="label label-success">h2</span><a/>
+                  </li>
+                </ul>
+                <div class="progress">
+                  <div class="progress-bar progress-bar-primary" style="width: 60%"></div>
+                </div>
+                <hr>
+                <ul class="project-params">
+                  <li class="param">
+                    <span>32 <i class="fa fa-heart"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>54 <i class="fa fa-eye"></i></span>
+                  </li>
+                  <li class="param">
+                    <span>2/4 <i class="fa fa-child"></i></span>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
+
+            <div class="panel panel-warning col-sm-5 col-md-5 col-lg-3">
+              <div class="panel-heading">
+                <h3 class="panel-title"><a href="#">Language Tutor</a></h3>
+              </div>
+              <div class="panel-body">
+                <div class="image-container">
+                  <a href="#"><img src="img/proj_img-1.jpg"></img></a>
+                </div>
+                <div class="info-container">
+                  <p><b>by <a href="#">Daniel Vasylenko</a></b></p>
+                  <b>Description:</b>
+                  <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In et finibus felis. Aliquam ante nunc, venenatis vitae tristique convallis, ultrices a nunc. Duis at nibh.</p>
+                  <ul class="project_hashtags">
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">JavaFX</span></a>
+                    </li>
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">Maven</span></a>
+                    </li>
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">Java</span></a>
+                    </li>
+                    <li class="hashtag">
+                      <a href="#"><span class="label label-success">h2</span><a/>
+                    </li>
+                  </ul>
+                  <div class="progress">
+                    <div class="progress-bar progress-bar-warning" style="width: 25%"></div>
+                  </div>
+                  <hr>
+                  <ul class="project-params">
+                    <li class="param">
+                      <span>40 <i class="fa fa-heart"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>25 <i class="fa fa-eye"></i></span>
+                    </li>
+                    <li class="param">
+                      <span>0/3 <i class="fa fa-child"></i></span>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+
     </div>
     <div class="menu-right col-xs-5 col-sm-4 col-md-3 col-lg-2">
       <div class="list-group">
-        <div class="form-group hidden-xs">
+        <div class="form-group">
           <div class="input-group">
-            <input class="search" type="text" id="text-input" name="text-input">
+            <input class="form-control input-sm" type="text" id="inputSmall">
             <span class="input-group-btn">
-              <a href="#" class="button blue square">Search</a>
+              <button class="btn btn-info btn-sm" type="button">Search</button>
             </span>
           </div>
         </div>
-        <p class="list-group-item active vt-p">
-          Categories
+
+        <p class="list-group-item vt-p">
+          <b>Categories</b>
         </p>
         <a href="#" class="list-group-item vt-p">IT
           <span class="badge">14</span>
