--- a/index.html
+++ b/index.html
@@ -629,5 +629,48 @@
       </div>
     </div>
   </div>
-  </body>
+
+<!-- Footer -->
+      <footer>
+        <div class="container footer-container">
+            <div class="row">
+                <div class="col-lg-12 footer-content">
+                  <div class="col-xs-6 col-sm-4">
+                    <ul class="social_list">
+                      <li class="social_btn social-header">Follow us on:</li>
+                      <li class="social_btn"><a href="#"><span class="icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
+                      <li class="social_btn"><a href="#"><span class="icon google"><i class="fa fa-google-plus"></i></span></a></li>
+                      <li class="social_btn"><a href="#"><span class="icon linkedIn"><i class="fa fa-linkedin"></i></span></a></li>
+                    </ul>
+                  </div>
+                  <div class="col-xs-6 col-sm-4">
+
+                  </div>
+                  <div class="col-xs-6 col-sm-4">
+                  </div>
+                </div>
+                <div class="col-lg-12 copyrights">
+                  <ul class="list-inline">
+                      <li>
+                          <a href="#">Add Project</a>
+                      </li>
+                      <li class="footer-menu-divider">&sdot;</li>
+                      <li>
+                          <a href="#about">Apply for a project</a>
+                      </li>
+                      <li class="footer-menu-divider">&sdot;</li>
+                      <li>
+                          <a href="#services">Sign in</a>
+                      </li>
+                      <li class="footer-menu-divider">&sdot;</li>
+                      <li>
+                        <a href="#top">Sign up</a>
+                      </li>
+                  </ul>
+                  <p class="copyright text-muted small">Copyright &copy; Daniel Vasylenko 2014. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+      </footer>
+    </body>
 </html>
