--- a/index.html
+++ b/index.html
@@ -247,8 +247,30 @@
 
   <!-- Main content -->
   <div class="row main-content">
-    <div class="panels col-xs-7 col-sm-8 col-md-9 col-lg-10">
-        <div class="panel panel-warning col-sm-5 col-md-5 col-lg-3">
+    <!--<div class="menu-left ">
+      <div class="list-group">
+        <div class="form-group">
+          <div class="input-group">
+            <input class="form-control input-sm" type="text" id="inputSmall">
+            <span class="input-group-btn">
+              <button class="btn btn-info btn-sm" type="button">Search</button>
+            </span>
+          </div>
+        </div>
+
+        <p class="list-group-item vt-p">
+          <b>Categories</b>
+        </p>
+        <a href="#" class="list-group-item vt-p">IT
+          <span class="badge">14</span>
+        </a>
+        <a href="#" class="list-group-item vt-p">Music
+          <span class="badge">12</span>
+        </a>
+      </div>
+    </div>-->
+    <div class="panels">
+        <div class="panel panel-warning col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
           <div class="panel-heading">
             <h3 class="panel-title"><a href="#">Language Tutor</a></h3>
           </div>
@@ -292,7 +314,7 @@
             </div>
           </div>
         </div>
-        <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
+        <div class="panel panel-primary col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
           <div class="panel-heading">
             <h3 class="panel-title"><a href="#">TeamBaker</a></h3>
           </div>
@@ -336,7 +358,7 @@
             </div>
           </div>
         </div>
-          <div class="panel panel-info col-sm-5 col-md-5 col-lg-3">
+          <div class="panel panel-info col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">Call of Duty 'Ember'</a></h3>
             </div>
@@ -380,7 +402,7 @@
               </div>
             </div>
           </div>
-          <div class="panel panel-danger col-sm-5 col-md-5 col-lg-3">
+          <div class="panel panel-danger col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">PlayTune</a></h3>
             </div>
@@ -425,7 +447,7 @@
             </div>
           </div>
 
-          <div class="panel panel-info col-sm-5 col-md-5 col-lg-3">
+          <div class="panel panel-info col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">Call of Duty 'Ember'</a></h3>
             </div>
@@ -471,7 +493,7 @@
           </div>
 
 
-          <div class="panel panel-danger col-sm-5 col-md-5 col-lg-3">
+          <div class="panel panel-danger col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">PlayTune</a></h3>
             </div>
@@ -515,7 +537,7 @@
               </div>
             </div>
           </div>
-          <div class="panel panel-primary col-sm-5 col-md-5 col-lg-3">
+          <div class="panel panel-primary col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
             <div class="panel-heading">
               <h3 class="panel-title"><a href="#">TeamBaker</a></h3>
             </div>
@@ -560,7 +582,7 @@
             </div>
           </div>
 
-            <div class="panel panel-warning col-sm-5 col-md-5 col-lg-3">
+            <div class="panel panel-warning col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
               <div class="panel-heading">
                 <h3 class="panel-title"><a href="#">Language Tutor</a></h3>
               </div>
@@ -606,28 +628,7 @@
             </div>
 
     </div>
-    <div class="menu-right col-xs-5 col-sm-4 col-md-3 col-lg-2">
-      <div class="list-group">
-        <div class="form-group">
-          <div class="input-group">
-            <input class="form-control input-sm" type="text" id="inputSmall">
-            <span class="input-group-btn">
-              <button class="btn btn-info btn-sm" type="button">Search</button>
-            </span>
-          </div>
-        </div>
 
-        <p class="list-group-item vt-p">
-          <b>Categories</b>
-        </p>
-        <a href="#" class="list-group-item vt-p">IT
-          <span class="badge">14</span>
-        </a>
-        <a href="#" class="list-group-item vt-p">Music
-          <span class="badge">12</span>
-        </a>
-      </div>
-    </div>
   </div>
 
 <!-- Footer -->
@@ -635,7 +636,7 @@
         <div class="container footer-container">
             <div class="row">
                 <div class="col-lg-12 footer-content">
-                  <div class="col-xs-6 col-sm-4">
+                  <div class="col-xs-5 col-sm-2 col-md-2">
                     <ul class="social_list">
                       <li class="social_btn social-header">Follow us on:</li>
                       <li class="social_btn"><a href="#"><span class="icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
