Centered categories, search textbox

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
   <!-- Main content -->
   <div class="row main-content">
-    <!--<div class="menu-left ">
+    <div class="menu-left ">
       <div class="list-group">
         <div class="form-group">
           <div class="input-group">
@@ -257,18 +257,11 @@
             </span>
           </div>
         </div>
-
-        <p class="list-group-item vt-p">
-          <b>Categories</b>
-        </p>
-        <a href="#" class="list-group-item vt-p">IT
-          <span class="badge">14</span>
-        </a>
-        <a href="#" class="list-group-item vt-p">Music
-          <span class="badge">12</span>
-        </a>
+        
+        <a href="#" class="list-group-item vt-p">IT</a>
+        <a href="#" class="list-group-item vt-p">Music</a>
       </div>
-    </div>-->
+    </div>
     <div class="panels">
         <div class="panel panel-warning col-sm-5 col-md-6 col-lg-2 col-lg-offset-1">
           <div class="panel-heading">
