--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             </span>
           </div>
         </div>
-        
+
         <a href="#" class="list-group-item vt-p">IT</a>
         <a href="#" class="list-group-item vt-p">Music</a>
       </div>
@@ -627,9 +627,9 @@
 <!-- Footer -->
       <footer>
         <div class="container footer-container">
-            <div class="row">
+            <div class="row footer-row">
                 <div class="col-lg-12 footer-content">
-                  <div class="col-xs-5 col-sm-2 col-md-2">
+                  <div class="col-xs-6 col-sm-3 col-md-3">
                     <ul class="social_list">
                       <li class="social_btn social-header">Follow us on:</li>
                       <li class="social_btn"><a href="#"><span class="icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
@@ -637,10 +637,19 @@
                       <li class="social_btn"><a href="#"><span class="icon linkedIn"><i class="fa fa-linkedin"></i></span></a></li>
                     </ul>
                   </div>
-                  <div class="col-xs-6 col-sm-4">
+                  <div class="col-sm-6">
 
                   </div>
-                  <div class="col-xs-6 col-sm-4">
+                  <div class="col-xs-6 col-sm-3 col-md-3">
+                    <p class="subscription-header">Let's get in touch.</p>
+                    <div class="form-group subscription">
+                      <div class="input-group">
+                        <input class="form-control input-sm" type="text" id="inputSmall">
+                        <span class="input-group-btn">
+                          <button class="btn btn-info btn-sm" type="button">Subscribe</button>
+                        </span>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-lg-12 copyrights">
