--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
   <!-- Main content -->
   <div class="row main-content">
-    <div class="menu-left ">
+    <div class="menu-top">
       <div class="list-group">
         <div class="form-group">
           <div class="input-group">
@@ -257,9 +257,20 @@
             </span>
           </div>
         </div>
-
-        <a href="#" class="list-group-item vt-p">IT</a>
-        <a href="#" class="list-group-item vt-p">Music</a>
+        <div class="categories">
+          <a href="#" class="list-group-item vt-p">Art</a>
+          <a href="#" class="list-group-item vt-p">Dance</a>
+          <a href="#" class="list-group-item vt-p">Design</a>
+          <a href="#" class="list-group-item vt-p">Film & Video</a>
+          <a href="#" class="list-group-item vt-p">Games</a>
+          <a href="#" class="list-group-item vt-p">IT</a>
+          <a href="#" class="list-group-item vt-p">Journalism</a>
+          <a href="#" class="list-group-item vt-p">Music</a>
+          <a href="#" class="list-group-item vt-p">Photography</a>
+          <a href="#" class="list-group-item vt-p">Publishing</a>
+          <a href="#" class="list-group-item vt-p">Technology</a>
+          <a href="#" class="list-group-item vt-p">Other</a>
+        </div>
       </div>
     </div>
     <div class="panels">
@@ -631,7 +642,7 @@
                 <div class="col-lg-12 footer-content">
                   <div class="col-xs-6 col-sm-3 col-md-3">
                     <ul class="social_list">
-                      <li class="social_btn social-header">Follow us on:</li>
+                      <li class="social-header">Follow us on:</li>
                       <li class="social_btn"><a href="#"><span class="icon fb"><i class="fa fa-facebook fa-lg"></i></span></a></li>
                       <li class="social_btn"><a href="#"><span class="icon google"><i class="fa fa-google-plus"></i></span></a></li>
                       <li class="social_btn"><a href="#"><span class="icon linkedIn"><i class="fa fa-linkedin"></i></span></a></li>
@@ -641,7 +652,7 @@
 
                   </div>
                   <div class="col-xs-6 col-sm-3 col-md-3">
-                    <p class="subscription-header">Let's get in touch.</p>
+                    <p class="subscription-header">Let's get in touch</p>
                     <div class="form-group subscription">
                       <div class="input-group">
                         <input class="form-control input-sm" type="text" id="inputSmall">
